fixed spacing for paragraph in project

--- a/client/src/styles/Project.scss
+++ b/client/src/styles/Project.scss
@@ -7,6 +7,12 @@
     width: 80%;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
     height: 100%;
+    p {
+      width: 80%;
+      text-align: center;
+      line-height: 1.8;
+      font-size: 1.2rem;
+    }
     .project-carousel {
       width: 90%;
       img {
@@ -19,6 +25,7 @@
       h2 {
         text-decoration: underline;
       }
+
       a {
         border-radius: 4px;
         box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
